--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
+    "react-paginate": "^8.1.3",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
